# byui-browser

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/browser/: Cargo.toml
crates/browser/src/: main.rs
crates/chrome/: Cargo.toml
crates/chrome/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: dom.rs  error.rs  ids.rs  ipc.rs  lib.rs
crates/css/: Cargo.toml
crates/css/src/: lib.rs
crates/devtools/: Cargo.toml
crates/devtools/src/: lib.rs
crates/html/: Cargo.toml
crates/html/src/: lib.rs
crates/js/: Cargo.toml
crates/js/src/: lib.rs
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs
crates/paint/: Cargo.toml
crates/paint/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/webapis/: Cargo.toml
crates/webapis/src/: lib.rs
docs/: TEAMS.md  TECH_ARCHITECTURE.md
docs/adr/: 0000-template.md  README.md
tests/: README.md
