[workspace]
resolver = "3"
members = [
    "crates/common",
    "crates/html",
    "crates/css",
    "crates/layout",
    "crates/paint",
    "crates/render",
    "crates/js",
    "crates/webapis",
    "crates/net",
    "crates/storage",
    "crates/security",
    "crates/chrome",
    "crates/devtools",
    "crates/browser",
]
default-members = ["crates/browser"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/byui-cse/byui-browser"
rust-version = "1.85"

[workspace.dependencies]
common = { path = "crates/common" }
html = { path = "crates/html" }
css = { path = "crates/css" }
layout = { path = "crates/layout" }
paint = { path = "crates/paint" }
render = { path = "crates/render" }
js = { path = "crates/js" }
webapis = { path = "crates/webapis" }
net = { path = "crates/net" }
storage = { path = "crates/storage" }
security = { path = "crates/security" }
chrome = { path = "crates/chrome" }
devtools = { path = "crates/devtools" }

[workspace.lints.rust]
unsafe_code = "warn"
