[package]
name = "chrome"
description = "Browser UI: tabs, navigation, menus, settings, bookmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
common = { workspace = true }

[lints]
workspace = true
