[package]
name = "devtools"
description = "DevTools protocol, inspector, debugger, and profiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
common = { workspace = true }

[lints]
workspace = true
