[package]
name = "net"
description = "HTTP(S) networking, caching, cookies, and connection pooling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
common = { workspace = true }

[lints]
workspace = true
