[package]
name = "security"
description = "Sandboxing, site isolation, CSP, cookies policy, and permissions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
common = { workspace = true }

[lints]
workspace = true
