[package]
name = "storage"
description = "Client-side storage APIs (IndexedDB, localStorage, Cache API)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
common = { workspace = true }

[lints]
workspace = true
